Agregar campo ciudad (#5)

--- a/curso-frontend-developer/registro/registro.html
+++ b/curso-frontend-developer/registro/registro.html
@@ -23,6 +23,7 @@
         <input class="input" type="text" placeholder="Apellidos">
         <input class="input" type="text" placeholder="Fecha de nacimiento">
         <input class="input" type="text" placeholder="Correo">
+        <input class="input" type="text" placeholder="Ciudad" required>
         <input class="input" type="password" placeholder="Contraseña">
         <button class="button">Registrarme</button>
       </form>
